--- a/06_position_priklady/index.html
+++ b/06_position_priklady/index.html
@@ -23,12 +23,12 @@
 
 		<p>Dolor quae culpa voluptate nobis consequatur quidem earum incidunt eos rerum? Recusandae velit eum dolores, commodi obcaecati quam voluptas sunt animi et enim id, ducimus vel magni, assumenda aperiam corporis.</p>
 
-		<div>
+		<div class="Tabulka">
 
-			<div>Levý horní roh</div>
-			<div>Pravý okraj uprostřed</div>
-			<div>Pravý dolní roh</div>
-			<div>Dolní okraj uprostřed</div>
+			<div class="levy_horni">Levý horní roh</div>
+			<div class="pravy_uprostred">Pravý okraj uprostřed </div>
+			<div class="pravy_dolni">Pravý dolní roh</div>
+			<div class="dolni">Dolní okraj uprostřed</div>
 
 		</div>
 
@@ -36,7 +36,7 @@
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, quibusdam at illo harum libero quaerat ducimus labore distinctio officia aliquam in nemo similique repellendus sunt omnis quae officiis amet, veritatis, esse explicabo. Sed facilis doloribus tempore quo autem adipisci praesentium!</p>
 
 
-		<div>
+		<div class="Neprectene_e-maily">
 			Nepřečtené e-maily
 			<span>13</span>
 		</div>
